make the header search form thinner on mid sized screens to stop the header wrapping
fixes #550

--- a/app/assets/stylesheets/global/_site-header.scss
+++ b/app/assets/stylesheets/global/_site-header.scss
@@ -4,4 +4,11 @@
       width: 100%;
     }
   }
+
+  form[role="search"] {
+    // restrict width of search form to avoid nav-bar wrapping
+    @media (min-width: $grid-float-breakpoint) and (max-width: 67em) {
+      width: 13em;
+    }
+  }
 }
